# GaijinTestTask

./: CMakeLists.txt  README.md  build.sh
Client/: CMakeLists.txt
Client/include/: Client.hpp  Settings.hpp
Client/src/: Client.cpp  Settings.cpp  main.cpp
Server/: CMakeLists.txt
Server/include/: ConnectionTCP.hpp  ContextIO.hpp  KeyValueParser.hpp  KeyValueStorage.hpp  KeyValueStorage_Value.hpp  ServerTCP.hpp
Server/src/: ConnectionTCP.cpp  KeyValueParser.cpp  KeyValueStorage.cpp  KeyValueStorage_Value.cpp  ServerTCP.cpp  main.cpp
